<resources>
    <string name="app_name">Outliers</string>
    <string name="final_goal">Final Goal</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="time">Practice</string>
    <string name="purpose_name">Purpose</string>
    <string name="purpose_example">Learn Chinese</string>
    <string name="save_goal">Save Goal</string>
    <string name="date">2010-09-15</string>
    <string name="font">NotoSans-Bold.ttf</string>
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>
    <string name="unit">hours</string>
    <string name="initTime">"00 : 00 : 00"</string>
    <string name="hoursOf">hours of</string>
    <string name="res_code">resultCode</string>
    <string name="start_or_stop">startOrStop</string>
    <string-array name="time_array">
        <item>100</item>
        <item>300</item>
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>

    <string name="point_font">KaushanScript-Regular.otf</string>
    <string name="roboto_light">RobotoCondensed-Light.ttf</string>
    <string name="roboto_regular">RobotoCondensed-Regular.ttf</string>
    <string name="toboto_bold">RobotoCondensed-Bold.ttf</string>
</resources>
